# ultracalc

./: .gitignore  README.md  main.c  meson.build
css/: styles.css
include/: app.h
lib/: app.c
